--- a/src/layouts/Learn/styles2.css
+++ b/src/layouts/Learn/styles2.css
@@ -1,4 +1,4 @@
-/* $white: #ffffff;
+$white: #ffffff;
 $redcolor: #FD5750;
 $textColor: #272727;
 $lightgrey: #8C8C8C;
@@ -249,4 +249,4 @@ section {
   height: 160px;
   width: 100%;
   margin: 180px 0 200px;
-} */
+}
