--- a/src/layouts/Learn/styles.css
+++ b/src/layouts/Learn/styles.css
@@ -58,12 +58,12 @@ section {
     content: '';
     top: -16px;
     left: -20px;
-    /* background: url('../../assets/reddotgrid.svg') no-repeat; */
+    background: url('../../assets/reddotgrid.svg') no-repeat;
     width: 98px;
     height: 38px;
   }
-  .theserverlessmovement,
-  .whatMakesServerless {
+  &.theserverlessmovement,
+  &.whatMakesServerless {
     padding-top: 242px;
     img {
       max-width: 200%;
@@ -73,7 +73,7 @@ section {
       transform: translateY(26%);
     }
   }
-  .whatMakesServerless {
+  &.whatMakesServerless {
     padding-top: 0;
     margin-top: -35px;
     img {
@@ -82,10 +82,10 @@ section {
       transform: translateY(32%);
     }
   }
-  .getStarted {
+  &.getStarted {
     .innerWrapper {
       display: block;
-      /* background: url('../../assets/cta-bg.png') no-repeat; */
+      background: url('../../assets/cta-bg.png') no-repeat;
       background-size: cover;
       text-align: center;
       padding: 60px 0 76px;
@@ -109,10 +109,11 @@ section {
       color: $textColor;
     }
   }
-  .benefitsOfServFramework,
-  .benefits {
+  &.benefitsOfServFramework,
+  &.benefits {
     text-align: center;
     margin-top: 168px;
+
     h3 + p {
       text-align: center;
     }
@@ -129,16 +130,17 @@ section {
     .innerWrapper {
       flex-wrap: wrap;
       padding-top: 90px;
-    }
-    .col {
-      position: relative;
-      width: 50%;
-      h4 {
-        padding: 20px 0;
-        margin: 0;
-      }
-      img {
-        max-width: 128px;
+
+      & .col {
+        position: relative;
+        width: 50%;
+        h4 {
+          padding: 20px 0;
+          margin: 0;
+        }
+        img {
+          max-width: 128px;
+        }
       }
     }
     h4, & p {
@@ -194,7 +196,7 @@ section {
       font-size: 7rem;
     }
   }
-  .theserverlessFramework {
+  &.theserverlessFramework {
     margin-top: 200px;
     img {
       max-width: 200%;
